adding images to page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,166 @@
 </head>
 <body>
     
+    <!---- FILTER ---->
+
+    <div class="container">
+
+        <div class="gallery">
+            <div class="movie-gallery movie1">
+                <a href="#" class="link">
+                    <img class="img" src="./images/gone-girl.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie2">
+                <a href="#" class="link">
+                    <img class="img" src="./images/interstellar.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie3">
+                <a href="#" class="link">
+                    <img class="img" src="./images/avatar.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie4">
+                <a href="#" class="link">
+                    <img class="img" src="./images/manchester.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie5">
+                <a href="#" class="link">
+                    <img class="img" src="./images/ripley.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie6">
+                <a href="#" class="link">
+                    <img class="img" src="./images/i-care.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie7">
+                <a href="#" class="link">
+                    <img class="img" src="./images/hateful-8.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie8">
+                <a href="#" class="link">
+                    <img class="img" src="./images/coming-home.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie9">
+                <a href="#" class="link">
+                    <img class="img" src="./images/seven.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie10">
+                <a href="#" class="link">
+                    <img class="img" src="./images/quiet.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie11">
+                <a href="#" class="link">
+                    <img class="img" src="./images/hell-or.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie12">
+                <a href="#" class="link">
+                    <img class="img" src="images/identity.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie13">
+                <a href="#" class="link">
+                    <img class="img" src="./images/flight.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie14">
+                <a href="#" class="link">
+                    <img class="img" src="./images/wolf.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie15">
+                <a href="#" class="link">
+                    <img class="img" src="./images/lou.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie16">
+                <a href="#" class="link">
+                    <img class="img" src="./images/ben-back.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie17">
+                <a href="#" class="link">
+                    <img class="img" src="./images/gone-baby.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+            <div class="movie-gallery movie18">
+                <a href="#" class="link">
+                    <img class="img" src="./images/good-will.jpg">
+                    <div class="overlay">
+                        <span>abc</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
