--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!---- FILTER ---->
 
     <div class="container">
-
+        <h3>MovieSuite</h3>
         <div class="gallery">
             <div class="movie-gallery movie1">
                 <a href="#" class="link">
