adding summary to movie1

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/gone-girl.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>GONE GIRL</span>
+                        <p>On their fifth wedding anniversary, Nick Dunne 
+                            returns home to find his wife, Amy, missing. 
+                            Her disappearance receives press coverage. 
+                            Detective Rhonda Boney finds poorly concealed 
+                            evidence of a struggle in the house. The media 
+                            suspect Nick due to his apathy towards Amy's 
+                            disappearance.</p>
                     </div>
                 </a>
             </div>
