adding movie titles and summaries

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/interstellar.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>INTERSTELLAR</span>
+                        <p>A team of explorers must find the human race a 
+                            new home after Earth is struck with worldwide 
+                            food shortages and corn is the most valuable 
+                            food.</p>
                     </div>
                 </a>
             </div>
@@ -42,7 +46,11 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/avatar.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>AVATAR</span>
+                        <p>A paraplegic Marine dispatched to the moon 
+                            Pandora on a unique mission becomes torn 
+                            between following his orders and protecting 
+                            the world he feels is his home.</p>
                     </div>
                 </a>
             </div>
@@ -50,7 +58,13 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/manchester.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>MANCHESTER BY THE SEA</span>
+                        <p>Lee Chandler is a brooding, irritable loner who 
+                            works as a handyman. One damp winter day he 
+                            gets a call summoning him to his hometown. 
+                            His brother's heart has given out, and he's 
+                            been named guardian to his nephew. His return 
+                            to the past re-opens an unspeakable tragedy.</p>
                     </div>
                 </a>
             </div>
@@ -58,7 +72,11 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/ripley.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>THE TALENTED MR. RIPLEY</span>
+                        <p>In late 1950s New York, a young underachiever 
+                            named Tom Ripley is sent to Italy to retrieve 
+                            Dickie Greenleaf, a rich and spoiled millionaire 
+                            playboy.</p>
                     </div>
                 </a>
             </div>
@@ -66,23 +84,33 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/i-care.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>I CARE A LOT</span>
+                        <p>A shady legal guardian lands in hot water when 
+                            she tries to bilk a woman who has ties to a 
+                            powerful gangster.</p>
                     </div>
                 </a>
             </div>
-            <div class="movie-gallery movie7">
+            <div class="movie-gallery movie7"> <!--MISSING-->
                 <a href="#" class="link">
                     <img class="img" src="./images/hateful-8.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>THE HATEFUL EIGHT</span>
+                        <p>In the dead of a Wyoming winter, a bounty 
+                            hunter and his prisoner find shelter in a 
+                            cabin currently inhabited by a collection of 
+                            nefarious characters.</p>
                     </div>
                 </a>
             </div>
-            <div class="movie-gallery movie8">
+            <div class="movie-gallery movie8"> <!--MISSING-->
                 <a href="#" class="link">
                     <img class="img" src="./images/coming-home.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>COMING HOME IN THE DARK</span>
+                        <p>Ruthless drifters take a school teacher and his 
+                            family on a nightmarish road trip that forces the 
+                            man to confront his past self.</p>
                     </div>
                 </a>
             </div>
@@ -90,7 +118,10 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/seven.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>SEVEN</span>
+                        <p>Two detectives, a rookie and a veteran, 
+                            hunt a serial killer who uses the seven 
+                            deadly sins as his motives.</p>
                     </div>
                 </a>
             </div>
@@ -98,7 +129,10 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/quiet.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>A Quiet Place</span>
+                        <p>In a post-apocalyptic world, a family is 
+                            forced to live in silence while hiding from 
+                            monsters with ultra-sensitive hearing.</p>
                     </div>
                 </a>
             </div>
@@ -106,7 +140,10 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/hell-or.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>HELL OR HIGH WATER</span>
+                        <p>A divorced father and his ex-con older brother 
+                            resort to a desperate scheme in order to save 
+                            their family's ranch in West Texas.</p>
                     </div>
                 </a>
             </div>
@@ -114,7 +151,11 @@
                 <a href="#" class="link">
                     <img class="img" src="images/identity.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>IDENTITY</span>
+                        <p>Stranded at a desolate Nevada motel during a 
+                            nasty rain storm, ten strangers become 
+                            acquainted with each other when they realize 
+                            that they're being killed off one by one.</p>
                     </div>
                 </a>
             </div>
@@ -122,7 +163,11 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/flight.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>FLIGHT</span>
+                        <p>An airline pilot saves almost all his passengers 
+                            on his malfunctioning airliner which eventually 
+                            crashed, but an investigation into the accident 
+                            reveals something troubling.</p>
                     </div>
                 </a>
             </div>
@@ -130,7 +175,11 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/wolf.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>THE WOLF OF WALL STREET</span>
+                        <p>Based on the true story of Jordan Belfort, 
+                            from his rise to a wealthy stock-broker living 
+                            the high life to his fall involving crime, 
+                            corruption and the federal government.</p>
                     </div>
                 </a>
             </div>
@@ -138,7 +187,12 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/lou.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>LOU</span>
+                        <p>A storm rages. A young girl is kidnapped. 
+                            Her mother teams up with the mysterious woman 
+                            next door to pursue the kidnapper, a journey 
+                            that tests their limits and exposes shocking 
+                            secrets from their pasts.</p>
                     </div>
                 </a>
             </div>
@@ -146,7 +200,10 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/ben-back.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>BEN IS BACK</span>
+                        <p>A drug addicted teenage boy shows up 
+                            unexpectedly at his family's home on Christmas 
+                            Eve.</p>
                     </div>
                 </a>
             </div>
@@ -154,7 +211,10 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/gone-baby.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>GONE BABY GONE</span>
+                        <p>Two Boston area detectives investigate a little 
+                            girl's kidnapping, which ultimately turns into 
+                            a crisis both professionally and personally.</p>
                     </div>
                 </a>
             </div>
@@ -162,7 +222,10 @@
                 <a href="#" class="link">
                     <img class="img" src="./images/good-will.jpg">
                     <div class="overlay">
-                        <span>abc</span>
+                        <span>GOOD WILL HUNTING</span>
+                        <p>Will Hunting, a janitor at M.I.T., has a gift 
+                            for mathematics, but needs help from a 
+                            psychologist to find direction in his life.</p>
                     </div>
                 </a>
             </div>
