--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
                 </a>
             </div>
-            <div class="movie-gallery movie7"> <!--MISSING-->
+            <div class="movie-gallery movie7">
                 <a href="#" class="link">
                     <img class="img" src="./images/hateful-8.jpg">
                     <div class="overlay">
@@ -103,7 +103,7 @@
                     </div>
                 </a>
             </div>
-            <div class="movie-gallery movie8"> <!--MISSING-->
+            <div class="movie-gallery movie8">
                 <a href="#" class="link">
                     <img class="img" src="./images/coming-home.jpg">
                     <div class="overlay">
